[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/PersonagemJogavel/NPC/NPC novo 1.1 (mov).png" type="Texture" id=1]
[ext_resource path="res://Sprites/Hud/New Piskel-1.png (3).png" type="Texture" id=2]
[ext_resource path="res://Cenas/NPC.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "NPC_idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("NpcNovo11(mov):hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NpcNovo11(mov):frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NpcNovo11(mov):hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NpcNovo11(mov):frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 37 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("flag:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaNPC/flag:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "popping_e"
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaNPC/flag:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, -38 ), Vector2( 0, -32 ) ]
}

[node name="NPC" type="Node2D"]
script = ExtResource( 3 )

[node name="NpcNovo11(mov)" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 4

[node name="AnimationPlayerNPC" type="AnimationPlayer" parent="."]
anims/NPC_idle = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="AreaNPC" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaNPC"]
position = Vector2( 0, -14 )
shape = SubResource( 3 )

[node name="flag" type="Sprite" parent="AreaNPC"]
position = Vector2( 0, -32 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="AnimationPlayerE" type="AnimationPlayer" parent="AreaNPC"]
root_node = NodePath("../..")
anims/RESET = SubResource( 4 )
anims/popping_e = SubResource( 5 )

[connection signal="body_entered" from="AreaNPC" to="." method="_on_AreaNPC_body_entered"]
